FIX: Added wrap content to handle space behind nav and footer more stably

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -56,3 +56,16 @@
 .block-quarter {
     min-height: 25vh;
 }
+
+details {
+  max-width: 1400px;
+  min-width: 75vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#wrap {
+  margin-top: 100px;  /* Nav menu height */
+  min-height: calc(100% - 100px - 475px);
+  margin-bottom: 475px; /* Footer height */
+}
